--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
 
         <div class="flex items-center gap-3">
-          <a href="https://drive.google.com/file/d/1mrhBPfHAUQuCEBW9T1FtH_r5nm_pSNvk/view?usp=sharing" download class="hidden sm:inline-block px-4 py-2 text-sm border rounded-md hover:bg-gray-50 dark:hover:bg-gray-800">Resume</a>
+          <a href="https://drive.google.com/file/d/1mdGqk4xERykIkMu9FvyfJTiAJTkeT3vs/view?usp=sharing" download class="hidden sm:inline-block px-4 py-2 text-sm border rounded-md hover:bg-gray-50 dark:hover:bg-gray-800">Resume</a>
 
           <!-- Dark/Light toggle -->
           <button id="theme-toggle" class="p-2 rounded-md hover:bg-gray-100 dark:hover:bg-gray-800" aria-label="Toggle theme">
@@ -104,7 +104,7 @@
             </div>
 
             <div class="flex items-center gap-3">
-              <a href="https://drive.google.com/file/d/1mrhBPfHAUQuCEBW9T1FtH_r5nm_pSNvk/view?usp=sharing" download class="px-5 py-3 rounded-md bg-brand text-white shadow hover:opacity-95">View Resume</a>
+              <a href="https://drive.google.com/file/d/1mdGqk4xERykIkMu9FvyfJTiAJTkeT3vs/view?usp=sharing" download class="px-5 py-3 rounded-md bg-brand text-white shadow hover:opacity-95">View Resume</a>
               <a href="#projects" class="px-4 py-3 rounded-md border hover:bg-gray-50 dark:hover:bg-gray-800">View Projects</a>
             </div>
 
@@ -282,6 +282,8 @@
               <div>Spring MVC</div>
               <div>Microservices</div>
               <div>RESTful design</div>
+              <div>Thymeleaf</div>
+              <div>JPA</div>
               <div>Postman</div>
               <div>Swagger</div>
               <div>Tailwind</div>
